Mon Jan 12 08:12:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/run_test.pl:
          Added new test script for this test

Sat Jan 10 07:52:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/server.cpp:
          Fixed unicode compile errors

Fri Jan  9 12:08:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Bug_3079/run_test.pl:
          Resolved some copy/paste errors.

Fri Jan  9 09:41:51 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/AdvSlotExt/run_test.pl:
        * tests/Portable_Interceptors/Redirection/run_test.pl:
        * tests/Portable_Interceptors/Bug_3079/run_test.pl:
          Made "Fuzz" compliant.

Fri Jan  9 08:28:56 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/*:
          New regression test for bugzilla 3542

Thu Jan  8 19:10:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Request_Interceptor_Flow/run_test.pl:
          Made "Fuzz" compliant. Added new line add the end of the file

Thu Jan  8 19:10:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/AMI/run_test.pl:
        * tests/Portable_Interceptors/PolicyFactory/run_test.pl:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/run_test.pl:
          Made "Fuzz" compliant.

Thu Jan  8 18:11:56 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/run_test.pl:
        * tests/Portable_Interceptors/ForwardRequest/run_test.pl:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Collocated/run_test.pl:
        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/run_test.pl:
        * tests/Portable_Interceptors/Service_Context_Manipulation/run_test.pl:
          Made "Fuzz" compliant.

Thu Jan  8 11:41:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>
